--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ font-size: 12px;
 font-weight:bold;
 text-decoration: none;
 }
-/* exchange logo in navigation */
+/* hilton logo in navigation */
 .hilton-logo {
 width:110px;
 height:50px; 
@@ -147,4 +147,21 @@ background-color: #dddddd;
     border: solid 1px #ff0000;
 
     display: table;
+}
+/* back to top button */
+#back-to-top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 12px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+  
+#back-to-top-button:hover {
+    background-color: #555;
 }
